<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/details_txt"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/country"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirmed_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/total_confirmed"
        android:textColor="#0084F8"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recovered_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/recovered_in_last_24h"
        android:textColor="#009688"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mort_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/total_death"
        android:textColor="#F80000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/infected24_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/infected_in_last_24h"
        android:textColor="#2196F3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recovered24_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/total_recovered"
        android:textColor="#009688"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mort24_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/death_in_last_24h"
        android:textColor="#E91E63"
        android:textSize="20sp" />

</LinearLayout>